cli/tests/snapshot/snapshots/snapshot__test_stdout_fail_unexpected_error.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
testing foo/0...FAILED
testing foo/1...FAILED
testing bar/0...FAILED
test foo/0 failed
error: dynamic type error
  ┌─ [INPUTS_PATH]/doctest/fail_unexpected_error.ncl:1:7
  │
1 │ foo + "1"
  │       ^^^ this expression has type String, but Number was expected
  │
  = (+) expects its 2nd argument to be a Number

test foo/1 failed
error: dynamic type error
  ┌─ [INPUTS_PATH]/doctest/fail_unexpected_error.ncl:1:7
  │
1 │ foo + "1"
  │       ^^^ this expression has type String, but Number was expected
  │
  = (+) expects its 2nd argument to be a Number

test bar/0 failed
error: contract broken by a value
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ std.contract.Equal { foo = 2, }
  │ ------------------------------- expected type
  │
  ┌─ [INPUTS_PATH]/doctest/fail_unexpected_error.ncl:1:9
  │
1 │ { foo = 1 }
  │         ^ applied to this expression
